# digit-classification-app

./: .pre-commit-config.yaml  Dockerfile  README.md  conda-environment.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: dev-conda-environment.yaml  dev.Dockerfile  devcontainer.json
models/: model.pth
python/digit_classifier_app/: app.py  config.py
tests/: test_app.py
